# blog

./: .gitignore  Makefile  pyproject.toml
core/autenticacao/: urls.py  views.py
core/autenticacao/templates/: autenticacao_base.html
core/blog/: admin.py  models.py  urls.py  views.py
core/blog/migrations/: 0001_initial.py  0002_alter_post_conteudo_alter_post_data_publicacao.py  0003_post_imagem_capa_post_resumo.py  0004_alter_post_data_publicacao.py  0005_alter_post_data_publicacao.py  0006_alter_post_data_publicacao.py  0006_alter_post_data_publicacao_topico.py  0007_alter_post_data_publicacao.py  0007_remove_post_conteudo_remove_post_resumo_and_more.py  0008_alter_post_data_publicacao.py  0008_alter_post_data_publicacao_tag.py  0009_alter_post_data_publicacao.py  0009_alter_post_data_publicacao_assunto.py  0010_postsituacao_alter_post_data_publicacao_situacao_and_more.py  0011_alter_post_data_publicacao_comentario.py
core/blog/templates/: blog_base.html
core/contas/: admin.py  models.py  urls.py  usuario_form.py  views.py
core/contas/migrations/: 0001_initial.py  0002_remove_perfil_id_alter_perfil_foto_alter_perfil_user.py
core/contas/templates/: contas_base.html
core/contato/: contato_form.py  models.py  urls.py  views.py
core/contato/migrations/: 0001_initial.py
core/contato/templates/: contato_base.html
core/core/: settings.py  urls.py
core/cursos/: urls.py
core/cursos/templates/: cursos_base.html
core/quiz/: admin.py  models.py  urls.py  views.py
core/quiz/migrations/: 0001_initial.py
core/templates/: base.html
(+21 files in other folders)
