[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["capy <larissa.laritt@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
django-ckeditor = "^6.5.1"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
