[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["capy <larissa.laritt@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
django-ckeditor = "^6.5.1"
Pillow = "^9.2.0"
python-dotenv = "^0.21.0"
django-widget-tweaks = "^1.4.12"
django-allauth = "^0.51.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
prospector = "^1.7.7"
pip-audit = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
